Improve tests, readme and add javadoc